// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggletip /> CustomTargetElement matches with snapshot 1`] = `
<span
  className="sc-gsDKAQ dDlqZW k-Toggletip k-Toggletip--info k-Toggletip--hasIcon"
  id="Toggletip-demo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "--toggletipAction-left": undefined,
      "--toggletipAction-top": undefined,
    }
  }
>
  <button
    aria-label="Sample label"
    className="k-Toggletip--hasIcon k-u-reset-button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="sc-bdvvtL wpCaS k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
      style={
        Object {
          "--iconBadge-background-color": null,
          "--iconBadge-border-color": null,
          "--iconBadge-border-style": null,
          "--iconBadge-border-width": null,
        }
      }
    >
      <svg
        fill="var(--color-grey-900)"
        height="14"
        viewBox="0 0 4 14"
        width="4"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="2"
          cy="1.25"
          r="1.25"
          transform="rotate(-180 2 1.25)"
        />
        <rect
          height="9"
          rx="1.25"
          transform="rotate(-180 3.25 13.5)"
          width="2.5"
          x="3.25"
          y="13.5"
        />
      </svg>
    </span>
  </button>
  <span
    role="status"
  />
</span>
`;

exports[`<Toggletip /> Default matches with snapshot 1`] = `
<span
  className="sc-gsDKAQ dDlqZW k-Toggletip k-Toggletip--info k-Toggletip--hasIcon"
  id="Toggletip-demo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "--toggletipAction-left": undefined,
      "--toggletipAction-top": undefined,
    }
  }
>
  <button
    aria-label="Sample label"
    className="k-Toggletip--hasIcon k-u-reset-button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="sc-bdvvtL wpCaS k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
      style={
        Object {
          "--iconBadge-background-color": null,
          "--iconBadge-border-color": null,
          "--iconBadge-border-style": null,
          "--iconBadge-border-width": null,
        }
      }
    >
      <svg
        fill="var(--color-grey-900)"
        height="14"
        viewBox="0 0 4 14"
        width="4"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="2"
          cy="1.25"
          r="1.25"
          transform="rotate(-180 2 1.25)"
        />
        <rect
          height="9"
          rx="1.25"
          transform="rotate(-180 3.25 13.5)"
          width="2.5"
          x="3.25"
          y="13.5"
        />
      </svg>
    </span>
  </button>
  <span
    role="status"
  />
</span>
`;

exports[`<Toggletip /> With props matches with snapshot 1`] = `
<span
  className="sc-gsDKAQ dDlqZW k-Toggletip k-Toggletip--warning k-Toggletip--hasIcon"
  id="Toggletip-demo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "--toggletipAction-left": undefined,
      "--toggletipAction-top": undefined,
    }
  }
>
  <button
    aria-label="Sample label"
    className="k-Toggletip--hasIcon k-u-reset-button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="sc-bdvvtL wpCaS k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--warning k-IconBadge--hasBorder"
      style={
        Object {
          "--iconBadge-background-color": null,
          "--iconBadge-border-color": null,
          "--iconBadge-border-style": null,
          "--iconBadge-border-width": null,
        }
      }
    >
      <svg
        fill="var(--color-grey-900)"
        height="14"
        viewBox="0 0 4 14"
        width="4"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="2"
          cy="12.25"
          r="1.25"
        />
        <rect
          height="9"
          rx="1.25"
          width="2.5"
          x=".75"
        />
      </svg>
    </span>
  </button>
  <span
    role="status"
  />
</span>
`;
